# Pinpoint

./: .gitignore  PINPOINT_PLAN_PROMPT.md  PinpointLogo.af  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
.github/workflows/: release.yml
dist-combined/: index.html
dist-combined/app/: index.html
dist-combined/app/assets/: IconPicker-B6mU5XI9.js  editor-SrbKJw4L.js  index-B6ht11OA.js  index-BeHiX6_Q.js  index-Dl_SE1H3.js  index-peBbMpwn.css  motion-DEBtMYQR.js  recurrence-CdPkWBOI.js  window-DqXhdmKq.js
dist-combined/assets/: index-BF89nDtE.css  index-UmxQofc-.js
docs/: MOBILE_ANDROID_PLAN.md  llm-cli-integration-plan.md  stable-page-ids-and-incremental-index.md
sample-vault/: Welcome.md
sample-vault/Projects/: .pinpoint-db.json  Garden redesign.md  Launch PINPOINT.md
scripts/: build-web.mjs  release.mjs
src/: App.tsx  api.ts  conflicts.ts  dateformat.ts  dblogic.ts  fsa-vault.ts  fuzzy.ts  main.tsx  markdown.ts  motion.ts  periodic.ts  querydsl.ts  recurrence.ts  styles.css  templates.ts  theme-apply.ts  themes-store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_storage.rs  crypto.rs  index.rs  lib.rs  llm.rs  lock.rs  main.rs  query.rs  recents.rs  settings.rs  themes.rs  vault.rs
src/components/: AssetViewer.tsx  Breadcrumb.tsx  ColorPicker.tsx  CommandPalette.tsx  ConflictDialog.tsx  ContextMenu.tsx  CreateDialog.tsx  DatabaseView.tsx  DatePicker.tsx  DbBoardView.tsx  DbCalendarView.tsx  DbGalleryView.tsx  DbPageProperties.tsx  DbShared.tsx  DbTableView.tsx  DbToolbar.tsx  Dialogs.tsx  Editor.tsx  FileTree.tsx  FolderBrowser.tsx  FolderView.tsx  Icon.tsx  IconPicker.tsx  ImageNode.tsx  LlmPanel.tsx  MobileNavbar.tsx  PageProperties.tsx  PageTitle.tsx  PathBreadcrumb.tsx  PeriodicBar.tsx  QueryBlock.tsx  QueryHelper.tsx  QueryResultView.tsx  QueryView.tsx  RightSidebar.tsx  Select.tsx  SettingsPanel.tsx  ShortcutsPopup.tsx  StartScreen.tsx  TagsView.tsx  (+14 more)
src/hooks/: useFocusTrap.ts  useSwipeNav.ts  useViewport.ts
src/lib/: haptics.ts  updater.ts  zoom.ts
src/llm/: options.ts  refs.ts  render.tsx  transport.ts
tmp/: md.cjs
website/: index.html  package-lock.json  package.json
website/src/: App.jsx  styles.css
