[package]
name = "pinpoint"
version = "0.3.0"
description = "PINPOINT — a free, local-first Notion/Obsidian alternative"
authors = ["PINPOINT"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "pinpoint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

# The auto-updater is desktop-only.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6"
walkdir = "2"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
gray_matter = "0.2"
base64 = "0.22"

[features]
# This feature is used for production builds or when a dev server is not specified.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
