[package]
name = "pinpoint"
version = "0.5.0"
description = "PINPOINT — a free, local-first Notion/Obsidian alternative"
authors = ["PINPOINT"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "pinpoint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

# Core deps — required on every platform (desktop AND mobile). These power the
# vault model, SQLite index, markdown/YAML round-trip, and encryption-at-rest.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
gray_matter = "0.2"
base64 = "0.22"
# Async subprocess driving for the LLM CLI integration (spawn `claude`/`gemini`/`codex`,
# stream their stdout line-by-line). `process` + `io-util` + `rt` is all the llm module needs;
# Tauri already runs a tokio runtime, so we reuse it rather than starting our own.
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "sync"] }
# Encryption-at-rest for locked vaults/folders. Argon2id derives a key from the
# password; XChaCha20-Poly1305 is an authenticated cipher (tamper-evident); zeroize wipes keys from
# memory on lock; getrandom supplies OS CSPRNG salts/nonces. All pure-Rust → cross-compile to Android.
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
getrandom = "0.2"

# Desktop-only deps. The auto-updater has no mobile story (updates ship via the
# app stores), and the `notify` filesystem watcher relies on inotify/FSEvents/
# ReadDirectoryChangesW — none of which work under Android's sandbox. On mobile
# the watcher is cfg-gated off and we refresh on app resume instead.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
notify = "6"

# Android-only deps. We talk to the running Activity over JNI to (a) check the
# "All files access" grant and (b) open its settings screen — neither is reachable
# from `std::fs`. `ndk-context` hands us the JavaVM + Activity that Tauri/wry set up.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[features]
# This feature is used for production builds or when a dev server is not specified.
custom-protocol = ["tauri/custom-protocol"]

# NOTE: we deliberately use the default `panic = "unwind"` here (rather than "abort").
# On Android a Rust panic in a `#[tauri::command]` (e.g. `ndk_context::android_context()`
# panicking when called before wry initializes the context) would, under "abort", kill
# the entire app process — the v0.5.0 "app closes right after opening" crash. With unwind,
# such panics are caught at the IPC boundary and surface as a rejected promise instead, and
# our `catch_unwind` guards (see android_storage.rs) can recover. The small binary-size /
# perf cost is worth not hard-crashing the app on any stray panic on mobile.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
